insta story feature

--- a/05_Insta_Story_Feature/index.html
+++ b/05_Insta_Story_Feature/index.html
@@ -16,38 +16,8 @@
         <div class="insta-icon">
           <img src="insta.png" alt="" />
         </div>
-        <section id="stories">
-          <section class="img-container">
-            <img
-              src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bW9kZWx8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-              alt=""
-            />
-          </section>
-          <section class="img-container">
-            <img
-              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bW9kZWx8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-              alt=""
-            />
-          </section>
-          <section class="img-container">
-            <img
-              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bW9kZWx8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-              alt=""
-            />
-          </section>
-          <section class="img-container">
-            <img
-              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bW9kZWx8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-              alt=""
-            />
-          </section>
-          <section class="img-container">
-            <img
-              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bW9kZWx8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-              alt=""
-            />
-          </section>
-        </section>
+        <div id="full-screen"></div>
+        <section id="stories" class="stories"></section>
 
         <section id="feed">
           <div class="feed-container">
